WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282408
Suppress smart pointer warnings in ContainerNode.h
https://bugs.webkit.org/show_bug.cgi?id=282408
Summary
Suppress smart pointer warnings in ContainerNode.h
Ryosuke Niwa
Reported
2024-10-31 14:16:40 PDT
Suppress smart pointer warnings in ContainerNode.h since adopting smart pointer results in Speedometer 3 regression.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-31 14:20:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36016
EWS
Comment 2
2024-10-31 16:02:32 PDT
Committed
285984@main
(a572264d9d39): <
https://commits.webkit.org/285984@main
> Reviewed commits have been landed. Closing PR #36016 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-31 16:03:25 PDT
<
rdar://problem/139036162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug