Suppress smart pointer warnings in ContainerNode.h https://bugs.webkit.org/show_bug.cgi?id=282408

Reviewed by Geoffrey Garen.

Suppress smart pointer warnings in ContainerNode::ChildChange as adopting smart pointer
in this code results in Speedometer 3 regression.

Also suppress local variable warnings in collectChildNodes. This function which collects
the list of child nodes is obviously safe.

* Source/WebCore/SaferCPPExpectations/NoUncountedMemberCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:
* Source/WebCore/dom/ContainerNode.h:
(WebCore::collectChildNodes):

Canonical link: https://commits.webkit.org/285984@main